# student-admin-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE.md  README.md  config.yaml  corpus  dictionary.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  topics.yaml
.claude/skills/refine-corpus/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: dictionary.json  program_nicknames.json  replay_ignore.yaml  study_plan_atlas.yaml  url_manifest.yaml  url_manifest_KTH.yaml
docs/: DEPLOY.md  corpus
docs/examples/: curated_markdown_example.md
docs/slides/: index.html  kth-reveal.css  kth-reveal.js
docs/slides/widgets/: pipeline.html
eval/: README.md  eval_set.yml  run_eval.py  survey_studyplans.py  test_cloud_llm.py  test_issue_55.py  test_program_resolution.py
eval/fixtures/: cinek_arskurs1.html  cinek_arskurs4.html  cinek_omfattning.html  ctfys_arskurs4.html  ctfys_omfattning.html
scripts/: audit_course_code_patterns.py  backfill_tokens.py  debug_diff_omfattning_genomforande.py  debug_inspect_studyplan_chunks.py  debug_measure_token_savings.py  down.py  fetch_url_corpus.py  host_metrics_collector.py  inspect_pdf.py  jargon.py  mkuser.py  mm_profile.py  reindex.py  replay_failures.py  smoke_studyplan_coverage.py  stats.py  up.py
src/student_bot/: config.py  jargon.py  lang.py  logging_db.py  version.py
src/student_bot/bot/: citations.py  course_resolver.py  gate.py  llm.py  mattermost_client.py  memory.py  pipeline.py  prompts.py  retrieval.py  study_plan_atlas.py  topics.py  web_cache.py  web_retrieval.py
src/student_bot/ingest/: _chroma_telemetry.py  chunk.py  embed.py  parse.py
src/student_bot/web/: app.py  auth.py  md_render.py
src/student_bot/web/static/: app.js  i18n.js  index.html  notice.js  stats.js  style.css
tests/: test_dynamic_web.py  test_eligibility_fallback.py  test_lint.py  test_log_redaction.py  test_memory.py  test_retrieval_language_bonus.py  test_url_ingest.py
tests/fixtures/: program_CELTE_20232_arskurs3.html  program_CFATE_20232_arskurs3.html  program_CTFYS_20232_arskurs3.html  program_CTFYS_20242_arskurs3.html
