[project]
name = "student-bot"
version = "0.1.0"
description = "RAG chatbot answering KTH CTFYS administrative questions over Mattermost."
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.7",

    # Retrieval stack
    "chromadb>=0.5,<0.7",
    "sentence-transformers>=3.0",
    "torch>=2.3",

    # Ingestion
    "pymupdf4llm>=0.0.17",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",

    # Language detection
    "lingua-language-detector>=2.0",

    # LLM
    "ollama>=0.4",

    # Mattermost
    "mattermostdriver>=7.3",
    "websockets>=12.0",

    # Web app
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
docling = ["docling>=2.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
student-bot-cli = "student_bot.bot.pipeline:main"
student-bot = "student_bot.bot.mattermost_client:main"
student-bot-web = "student_bot.web.app:main"
student-bot-reindex = "scripts.reindex:main"
student-bot-stats = "scripts.stats:main"
student-bot-mkuser = "scripts.mkuser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/student_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"
